--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -12,5 +12,10 @@ add_library(common
 target_include_directories(common
     PUBLIC
         ${PUBLIC_INCLUDES}
+		"${PROJECT_SOURCE_DIR}/deps/capstone/include/"
     PRIVATE
         ${CMAKE_CURRENT_BINARY_DIR})
+
+target_link_libraries(common
+    PUBLIC
+		capstone-static)
