--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ before_build:
     cmake --version
     cmake .. -G %generator%
 build:
-  project: c:\projects\cmake-init\build\template.sln
+  project: c:\projects\cmake-init\build\WoWOffsetDumper.sln
   verbosity: minimal
   parallel: true
 #only_commits:
