Reduced compile time by disabling capstone shared lib, tests and cstool.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/macros")
 
 include(AutoCollect)
 
+set(CAPSTONE_BUILD_SHARED OFF CACHE BOOL "Build shared library")
+set(CAPSTONE_BUILD_TESTS OFF CACHE BOOL "Build tests")
+set(CAPSTONE_BUILD_CSTOOL OFF CACHE BOOL "Build cstool")
+
 add_subdirectory(deps)
 add_subdirectory(src)
