--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ before_build:
     mkdir build
     cd build
     cmake --version
-    cmake .. -G %generator% -DCAPSTONE_ARM_SUPPORT=0 -DCAPSTONE_M680X_SUPPORT=0 -DCAPSTONE_M68K_SUPPORT=0 -DCAPSTONE_MIPS_SUPPORT=0 -DCAPSTONE_PPC_SUPPORT=0 -DCAPSTONE_SPARC_SUPPORT=0 -DCAPSTONE_SYSZ_SUPPORT=0 -DCAPSTONE_XCORE_SUPPORT=0 -DCAPSTONE_TMS320C64X_SUPPORT=0 -DCAPSTONE_M680X_SUPPORT=0 -DCAPSTONE_EVM_SUPPORT=0 -DCAPSTONE_BUILD_TESTS=0 -DCAPSTONE_BUILD_CSTOOL=0
+    cmake .. -G %generator% -DCAPSTONE_BUILD_SHARED=0 -DCAPSTONE_BUILD_TESTS=0 -DCAPSTONE_BUILD_CSTOOL=0
 build:
   project: c:\projects\cmake-init\build\WoWOffsetDumper.sln
   verbosity: minimal
