--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -3,35 +3,35 @@
   "configurations": [
     {
       "name": "Debug",
-      "generator": "Visual Studio 15 2017 Win64",
+      "generator": "Ninja",
       "configurationType": "Debug",
       "inheritEnvironments": [ "msvc_x64" ],
       "buildRoot": "${projectDir}\\build\\${name}",
       "installRoot": "${projectDir}\\install\\${name}",
       "cmakeCommandArgs": "",
-      "buildCommandArgs": "-m:8 -v:minimal",
+      "buildCommandArgs": "",
       "ctestCommandArgs": ""
     },
     {
       "name": "RelWithDebInfo",
-      "generator": "Visual Studio 15 2017 Win64",
+      "generator": "Ninja",
       "configurationType": "RelWithDebInfo",
       "inheritEnvironments": [ "msvc_x64" ],
       "buildRoot": "${projectDir}\\build\\${name}",
       "installRoot": "${projectDir}\\install\\${name}",
       "cmakeCommandArgs": "",
-      "buildCommandArgs": "-m:8 -v:minimal",
+      "buildCommandArgs": "",
       "ctestCommandArgs": ""
     },
     {
       "name": "Release",
-      "generator": "Visual Studio 15 2017 Win64",
+      "generator": "Ninja",
       "configurationType": "Release",
       "inheritEnvironments": [ "msvc_x64" ],
       "buildRoot": "${projectDir}\\build\\${name}",
       "installRoot": "${projectDir}\\install\\${name}",
       "cmakeCommandArgs": "",
-      "buildCommandArgs": "-m:8 -v:minimal",
+      "buildCommandArgs": "",
       "ctestCommandArgs": ""
     }
   ]
