--- a/src/WoWOffsetDumper/CMakeLists.txt
+++ b/src/WoWOffsetDumper/CMakeLists.txt
@@ -2,22 +2,18 @@ CollectSourceFiles(
     ${CMAKE_CURRENT_SOURCE_DIR}
     PRIVATE_SOURCES)
 
-CollectIncludeDirectories(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    PUBLIC_INCLUDES)
-
 add_executable(WoWOffsetDumper
     ${PRIVATE_SOURCES})
 
 target_include_directories(WoWOffsetDumper
     PUBLIC
-        ${PUBLIC_INCLUDES}
-    PRIVATE
-        ${CMAKE_CURRENT_BINARY_DIR})
+        ${CMAKE_CURRENT_SOURCE_DIR}
+		"${PROJECT_SOURCE_DIR}/deps/capstone/include/")
 
 target_link_libraries(WoWOffsetDumper
-    PUBLIC
-        common)
+	PRIVATE
+		capstone-static
+		clepta)
 
 if (WIN32)
     install(TARGETS WoWOffsetDumper DESTINATION "${CMAKE_INSTALL_PREFIX}")
